--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-tilt": "^0.1.4",
+    "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^10.3.1",
     "three": "^0.150.1"
